po: update po/ar_EG/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ar_EG/batch.po
+++ b/po/ar_EG/batch.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-08-24 09:44+0000\n"
-"Last-Translator: Nour El-Assaad <nelassaad@ndi.org>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Arabic (http://www.transifex.com/civicrm/civicrm/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,6 +33,10 @@ msgstr "إطّلع على/أضف صفقات إلى الدفعة "
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "إعادة فتح الدفعة"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -59,12 +63,52 @@ msgid "No export format selected."
 msgstr "لم يتمّ اختيار أي صيغة للتصدير."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "تاريخ التصدير"
+msgid "Batch ID"
+msgstr "الرمز التعريفي للدفعة"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "عدد المواد"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "وصف الدفعة"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "الدفعة من إنشاء"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "تاريخ إنشاء الدفعة"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "الدفعة من تعديل"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "تاريخ تعديل الدفعة"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "المجموعة الذكية للدفعة"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "إجمالي الدفعات"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "عدد البنود في الدفعة"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "تعليمات التسديد الخاصة بالدفعة"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "تاريخ تصدير الدفعة"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "بيانات الدفعة "
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -83,6 +127,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "إدخال بيانات الدفعة للعضويات"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "إدخال بيانات الدفعة لتسديد التعهدات"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "تجاهل التناقضات ومعالجة الدُفعة"
 
@@ -91,16 +139,16 @@ msgid "Validate & Process the Batch"
 msgstr "تصحيح ومعالجة الدُفعة"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "تمّ إقصاء بعض الخانات."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "يجب ألا تكون قيمة القروض الميسّرة أكبر من القيمة الإجمالية"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "حقل نوع العضوية مطلوب."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "لا يمكنك أن تسجل قسطين للتعهد نفسه في دفعة واحدة."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -149,6 +197,10 @@ msgstr "إجمالي المبالغ المتوقعة"
 msgid "Total amount entered"
 msgstr "إجمالي المبالغ المُدخلة"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "التعهدات المفتوحة (تاريخ التسديد- المبلغ)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "الدفعات الخاصة بإدخال البيانات"
@@ -170,65 +222,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "لم يتمّ إنشاء دفعات خاصة بإدخال البيانات لهذا الموقع. "
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "الرمز التعريفي للدفعة"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "عنوان الدفعة"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "وصف الدفعة"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "الدفعة من إنشاء"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "تاريخ إنشاء الدفعة"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "الدفعة من تعديل"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "تاريخ تعديل الدفعة"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "المجموعة الذكية للدفعة"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "إجمالي الدفعات"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "عدد البنود في الدفعة"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "تعليمات التسديد الخاصة بالدفعة"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "تاريخ تصدير الدفعة"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "بيانات الدفعة "
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "إدخال بيانات الدفعة لتسديد التعهدات"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "لا يمكنك أن تسجل قسطين للتعهد نفسه في دفعة واحدة."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "التعهدات المفتوحة (تاريخ التسديد- المبلغ)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
