--- a/po/ar_EG/grant.po
+++ b/po/ar_EG/grant.po
@@ -9,9 +9,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-11-03 15:17+0000\n"
-"Last-Translator: Nour El-Assaad <nelassaad@ndi.org>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Arabic (http://www.transifex.com/civicrm/civicrm/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,14 +38,6 @@ msgstr "تاريخ المنحة واجبة الأداء فارغ"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "تاريخ حسم المنحة فارغ"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "نوع المنحة %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "حالة المنحة  %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -92,10 +84,6 @@ msgid "Grant report received"
 msgstr "تقرير المنح المستلمة"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "معرف نوع المنحة"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "إجمالي المبلغ الممنوح"
 
@@ -107,10 +95,6 @@ msgstr "عملة المنحة "
 msgid "Grant Rationale"
 msgstr "سبب تقديم المنحة "
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "معرف حالات المنحة"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "تقرير المنح المستلمة ؟"
@@ -118,6 +102,10 @@ msgstr "تقرير المنح المستلمة ؟"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "<br /> المبلغ المطلوب (العملة الأصلية)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "مقدم الطلب"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -128,12 +116,14 @@ msgid "Delete Grants"
 msgstr "حذف منح"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "حذف المنح (s): %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "إجمالي المنح المختارة (s) : %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "لم يتمّ حذف أيّ منحة. "
+msgstr[1] "تمّ حذف منحة واحدة. "
+msgstr[2] "تمّ حذف منحتين. "
+msgstr[3] "تمّ حذف بضع منح. "
+msgstr[4] "تمّ حذف العديد من المنح."
+msgstr[5] "تمّ حذف عدد غير معروف من المنح."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -144,30 +134,46 @@ msgid "Update Grants"
 msgstr "تحديث المنح"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "تحديث المنح (s): %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "المنح المحدثة: %1 (إجمالي المختار: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "الوصول إلى CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "الاطلاع على جميع المنح "
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "تعديل المنح"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "إنشاء المنح وتحديثها"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "أحذف في CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "حذف المنح "
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "المنح"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "منحة من قبل"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "استعراض المنحة"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "تعديل منحة"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "هل أنت متأكد من أنك تريد حذف هذه المنحة؟"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "حذف منح"
 
@@ -180,16 +186,8 @@ msgid "Granted"
 msgstr "الموافقة على المنحة "
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "طباعة قائمة المنح"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "تصدير المنح"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "منحة جديدة"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -210,6 +208,14 @@ msgstr "تاريخ تحويل المنحة"
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(العملة الأصلية)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "وضع (أوضاع) المنح "
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "نوع (أنواع) المنح "
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -303,65 +309,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "هذه الصفحة تدرج جميع المنح %1 من البداية"
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "انقر<a accesskey='N' href='%1'>أضف مانح</a> لتسجيل منحة من هذا المتصل"
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "انقر <a %1>أضف منحة</a> لتسجيل منحة من هذا المتصل. "
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "لا يوجد أي سجل لأي منح من هذا المتصل"
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "مقدم الطلب"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "المنح المحدثة: %1 (إجمالي المختار: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "انقر <a %1>أضف منحة</a> لتسجيل منحة من هذا المتصل. "
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "لم يتمّ حذف أيّ منحة. "
-msgstr[1] "تمّ حذف منحة واحدة. "
-msgstr[2] "تمّ حذف منحتين. "
-msgstr[3] "تمّ حذف بضع منح. "
-msgstr[4] "تمّ حذف العديد من المنح."
-msgstr[5] "تمّ حذف عدد غير معروف من المنح."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "الوصول إلى CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "الاطلاع على جميع المنح "
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "تعديل المنح"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "إنشاء المنح وتحديثها"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "أحذف في CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "حذف المنح "
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "وضع (أوضاع) المنح "
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "نوع (أنواع) المنح "
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
