po: update po/ar_EG/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ar_EG/extension.po
+++ b/po/ar_EG/extension.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Arabic (http://www.transifex.com/civicrm/civicrm/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -27,11 +27,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "إنّ دليل ذاكرة الإمدادات (1%) ليس قابلاً للكتابة على خادم إلكتروني. يرجى التوجه إلى <a href=\"%2\">صفحة إعدادات المسار </a> وتصحيحها.<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "إنّ عدم وضع علامة في خانة الروابط البعيدة للامتدادات منذ ext_repo_url محدّد كخاطئ. "
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -53,10 +48,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "لا يوجد حاليا أي ملحقات على CiviCRM الدليل تمديد العام التي تتوافق مع الإصدار٪ 2 (<a href=\"٪1\"> طلب التمديد من هنا </a>). إذا كنت ترغب في تثبيت التمديد الذي لم يتم وضع علامة على أنها متوافقة، قد تكون قادرة على <a href=\"٪3\"> تحميل وتثبيت ملحقات الموقع </a> يدويا (اعتمادا على الوصول إلى خادم الويب الخاص بك). <ر / >"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "لا نوجد ملحقات متوفرة لهذا الإصدار"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -114,6 +105,13 @@ msgid ""
 msgstr "لن تتمكّن من تثبيت التمديدات هذه المرة لأنّ تثبيت الـPHP  لا يستقبل أرشيف ZIP. راجع مدير الموقع لتركيب التمديد المعياري PHP-ZIP "
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "تحذير: قد يكون الشخص الذي يقوم بالتنزيل غير قادر على تنزيل الملفات التي تتطلب إعادة توجيه HTTP. قد تكون هناك مشكلة ضبط مع النمط الآمن أو الأساس المفتوح لـPHP."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "غير قادر على استخراج التمديد: بنية الفهرس سيئة"
 
@@ -157,9 +155,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "إنّ نسخة عن التمديد (1%) موجودة في ملف النظام (2%). ستبقى نسخة النظام محفوظة، لكن ستستخدم النسخة الجديدة. "
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "تحذير: قد يكون الشخص الذي يقوم بالتنزيل غير قادر على تنزيل الملفات التي تتطلب إعادة توجيه HTTP. قد تكون هناك مشكلة ضبط مع النمط الآمن أو الأساس المفتوح لـPHP."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
