po: update po/ar_EG/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ar_EG/pledge.po
+++ b/po/ar_EG/pledge.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Arabic (http://www.transifex.com/civicrm/civicrm/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -50,12 +50,12 @@ msgid "Pledge Payment Status"
 msgstr "حالة دفع التعهّد "
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - مستحق الدفع في %2 (مستحق ولم يدفع في تاريخ استحقاقه)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - مستحق بتاريخ %2 (وقد تأخّر دفعه)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - مستحق الدفع في %2"
+msgid "%1 - due on %2"
+msgstr "%1 - مستحق بتاريخ %2 "
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -79,14 +79,6 @@ msgid "Pledge Frequency Interval"
 msgstr "فاصل وتيرة التعهّد"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "حالة التعهّد %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "حالة دفع التعهّد %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "التعهّد هو اختبار"
 
@@ -97,6 +89,10 @@ msgstr "النوع المالي - 1%"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "الصفحة المالية - 1%"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -146,10 +142,6 @@ msgstr "التاريخ المعدّل للتعهّد"
 msgid "Pledge Cancelled Date"
 msgstr "التاريخ الملغى للتعهّد"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "جهة الاتصال الفخرية الخاصة بالتعهد"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "العدد الأقصى من رسائل التذكير"
@@ -188,12 +180,12 @@ msgid "Reminders Sent"
 msgstr "تمّ إرسال رسائل التذكير"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "عدّل مواعيد دفع التعهد"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "تم تحديث جدول دفعات التعهّد."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "تعهّد من قبل"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -300,6 +292,10 @@ msgid "Pledger Name or Email"
 msgstr "اسم المتعهّد أو عنوان بريده الإلكتروني"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr ""
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "ايجاد التعهّدات"
 
@@ -308,12 +304,14 @@ msgid "Delete Pledges"
 msgstr "حذف التعهّدات"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "التعهّد (التعهّدات) المحذوفة: %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "إجمالي التعهّد (التعهّدات) المختارة: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "لم يتمّ حذف أي تعهد. "
+msgstr[1] "تمّ حذف تعهد واحد. "
+msgstr[2] "تمّ حذف تعهدين. "
+msgstr[3] "تمّ حذف بضعة تعهدات."
+msgstr[4] "تمّ حذف العديد من التعهدات."
+msgstr[5] "تمّ حذف عدد غير معروف من التعهدات."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -322,6 +320,30 @@ msgstr "طباعة قائمة التعهّدات"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "محرّك التعهّد الخاص بـ CiviCRM"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "الوصول إلى CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "استعرض التعهدات"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "عدّل التعهدات"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "أنشئ وحدّث التعهدات"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "حذف CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "أحذف التعهدات"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -339,11 +361,11 @@ msgid ""
 "pledge payments."
 msgstr "من شأن إلغاء هذا التعهّد أن يلغي أي مدفوعات كانت مقررة (ولم يتمّ تسديدها)."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "الاطلاع على التعهّد"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "تصحيح التعهّد"
 
@@ -351,7 +373,7 @@ msgstr "تصحيح التعهّد"
 msgid "Cancel Pledge"
 msgstr "ألغاء التعهّد"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "حذف التعهّد"
 
@@ -372,20 +394,12 @@ msgid "Pledge Search"
 msgstr "بحث عن تعهّد"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "طباعة التعهّدات"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "تصدير التعهّدات"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "عدّل مواعيد دفع التعهد"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "مواعيد دفع التعهد"
+msgid "Adjust scheduled amount"
+msgstr "غيّر المبلغ المقرر دفعه"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -394,10 +408,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "لن يُتاح لك إرسال إشعار باستلام هذا التعهد، بسبب عدم ذكر عنوان البريد الإلكتروني لجهة الاتصال هذه. إذا أردت إرسال إشعار بالاستلام عند تسجيل التعهد، أنقر على إلغاء ثمّ تعديل من علامة تبويب الملخص لإضافة عنوان البريد الإلكتروني قبل تسجيل التعهد. "
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "تعهد جديد"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -414,6 +424,10 @@ msgid ""
 msgstr "عوض ذلك فكّر في احتمال إلغاء التعهد إذا أردت الاحتفاظ بسجل لغايات التدقيق وعدم فقدان البيانات المتعلقة بدفعه. لاعتبار التعهد بحكم الملغى وإلغاء أي دفعات غير مسددة بعد، أنقر أولاً على إلغاء هذا النموذج، قبل أن تضغط على رابط &gt؛ المزيد من قائمة التعهدات، وتعطي الأمر بالإلغاء. "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "تعهّد من قبل"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -421,6 +435,7 @@ msgid ""
 msgstr "تغيّر مجموع المبلغ الموعود به في التعهد نظراً إلى تعديل الدفعات، بعد أن كان المبلغ الاصلي  %1. "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "أقساط لـ"
 
@@ -443,10 +458,6 @@ msgstr "تاريخ تسديد التعهد الأول."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "هل تريد أن ترسل عبر البريد الإلكتروني إشعاراً باستلام هذا التعهد إلى 1%؟"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "أرسل تلقائياً عبر البريد الإلكتروني إشعاراً باستلام هذا التعهد إلى"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -472,20 +483,12 @@ msgstr "تبقى التعهد \"معلّقاً\" إلى حين سداد الدف
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "إضغط على موافق لحفظ سجلٍ التعهّد وإرسال إشعار بالاستلام إلى %1 الآن"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "أنقر على موافق لحفظ سجل التعهد هذا وإرسال إشعار بالاستلام إلى %1 الآن."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "تعهّد من قبل"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "أقساط "
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "كلّ"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -512,10 +515,6 @@ msgid "Payments Ended Date"
 msgstr "تاريخ نهاية الدفعات"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "لم يتم العثور على أي نتائج تعهّد مناسبة."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -528,8 +527,16 @@ msgid ""
 msgstr "إذا كنت تبحث وفق التاريخ أو مقدار المبلغ، فجرّب مجموعة أوسع من القيم. "
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "أنقر على %1 لاستعراض دفعات التعهد. "
+msgid "Click arrow to view pledge payments."
+msgstr "أضغط على السهم لاستعراض دفعات التعهد."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "أظهر المبالغ المدفوعة"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "أخفِ المبالغ المدفوعة"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -549,10 +556,6 @@ msgstr "يدفع في"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "تاريخ البداية"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "تنفيذ التعهّد"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -603,20 +606,12 @@ msgid "Amount Paid"
 msgstr "المبلغ المسدّد"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>استعرض دفعات التعهد</a>"
+msgid "Credit Card Payment"
+msgstr "دفع ببطاقة الائتمان"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>سجّل الدفع (بموجب شيك، نقداً، عبر حوالة إلكترونية ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>إدفع ببطاقة الائتمان</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>عدّل مواعيد الدفع</a>"
+msgid "Edit Scheduled Payment"
+msgstr "عدّل مواعيد دفع التعهد"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -636,9 +631,10 @@ msgstr "لإرسال الرسائل التذكيرية:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "يتعيّن على مدير موقعك أن يجهّز البرنامج النصي المتوافر الذي يحدّث وضعية دفعات التعهد، ويرسل رسائل للتذكير بها (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "يتعيّن على مدير موقعك تجهيز المهمة المبرمجة (إدارة  > إعدادات النظام  > المهام المبرمجة) التي تحدّث وضعية دفعات التعهد وترسل رسائل للتذكير بها."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -658,13 +654,17 @@ msgstr "التعهدات الورادة من  %1 منذ البداية."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
 msgstr "أنقر على <a %1>أضف تعهداً</a> لتسجيل تعهد جديد مقدّم من جهة الاتصال هذه."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "لم يُسجَّل لجهة الاتصال هذه أي تعهدات."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -790,98 +790,38 @@ msgstr "شكراً لدعمك السخي."
 msgid "Pledge Payment Reminder"
 msgstr "تذكير بسداد التعهد"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - مستحق بتاريخ %2 (وقد تأخّر دفعه)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - مستحق بتاريخ %2 "
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "التعهد (العهدات) المحذوف: %1 (من أصل مجموع التعهدات المختارة: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "غيّر المبلغ المقرر دفعه"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "أنقر على موافق لحفظ سجل التعهد هذا وإرسال إشعار بالاستلام إلى %1 الآن."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "أضغط على السهم لاستعراض دفعات التعهد."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "أظهر المبالغ المدفوعة"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "أخفِ المبالغ المدفوعة"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "دفع ببطاقة الائتمان"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "عدّل مواعيد دفع التعهد"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "يتعيّن على مدير موقعك تجهيز المهمة المبرمجة (إدارة  > إعدادات النظام  > المهام المبرمجة) التي تحدّث وضعية دفعات التعهد وترسل رسائل للتذكير بها."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "أنقر على <a %1>أضف تعهداً</a> لتسجيل تعهد جديد مقدّم من جهة الاتصال هذه."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
 msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
 msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "لم يتمّ حذف أي تعهد. "
-msgstr[1] "تمّ حذف تعهد واحد. "
-msgstr[2] "تمّ حذف تعهدين. "
-msgstr[3] "تمّ حذف بضعة تعهدات."
-msgstr[4] "تمّ حذف العديد من التعهدات."
-msgstr[5] "تمّ حذف عدد غير معروف من التعهدات."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "الوصول إلى CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "استعرض التعهدات"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "عدّل التعهدات"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "أنشئ وحدّث التعهدات"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "حذف CiviPledge"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "أحذف التعهدات"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
