--- a/po/bg_BG/menu.po
+++ b/po/bg_BG/menu.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/civicrm/civicrm/language/bg/)\n"
 "MIME-Version: 1.0\n"
@@ -128,8 +128,8 @@ msgid "Case Activity"
 msgstr "Дейност на регистъра"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Доклад на регистъра"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -148,8 +148,8 @@ msgid "Assign to Another Client"
 msgstr "Възложи на друг клиент"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Създай дейност в регистъра"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -173,10 +173,6 @@ msgstr "Състояния на регистъра"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Отчети среди"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Промяна на състоянието"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -251,6 +247,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr ""
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -268,9 +268,15 @@ msgstr "Приети кредитни карти"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Участия"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr ""
@@ -320,6 +326,23 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Accounting Batch Export"
+msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr ""
+
+msgctxt "menu"
+msgid "Email Invoice"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -474,6 +497,11 @@ msgstr "Търси за предпочитания"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Меню за навигация"
 
@@ -507,10 +535,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Планирай напомняния "
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Това не би трябвало да се вижда"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -528,6 +552,11 @@ msgstr "Отпечатай страница с формати (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Формати за поздравителни ел. съобщения"
 
@@ -541,8 +570,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Формати на адреси"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "Езици, валута, местоположение"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -694,10 +724,6 @@ msgid "Administer CiviCRM"
 msgstr "Администриране на CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Опция на стойности"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Комплекти с цени"
 
@@ -765,10 +791,6 @@ msgstr "Интегратор търсене"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Текущи търсения"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Опростено търсене"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -860,6 +882,10 @@ msgid "CiviCRM Blog"
 msgstr ""
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Компонент случай "
 
@@ -914,6 +940,10 @@ msgid "Import Activities"
 msgstr "Внеси дейности"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Надгради CiviCRM"
 
@@ -950,12 +980,16 @@ msgid "Browse Uploaded files"
 msgstr "Прелисти качени файлове"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Изход"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -968,6 +1002,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "ProfileEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Confirm dates"
 msgstr ""
 
 msgctxt "menu"
@@ -1065,6 +1103,10 @@ msgid "Event Online Registration"
 msgstr "Регистрация он-лайн на събитие"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Конферентни места"
 
@@ -1098,6 +1140,10 @@ msgstr "Премахни от карта"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Разгледай карта"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1152,8 +1198,8 @@ msgid "Resubscribe"
 msgstr "Подновен абонамент"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Отказ"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1287,6 +1333,11 @@ msgstr "Изведи отчети"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM News"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1426,6 +1477,16 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr ""
 
@@ -1531,11 +1592,6 @@ msgstr "Местоположение"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Езици, валута, местоположение"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Предпочитани езикови настройки"
 
@@ -1553,6 +1609,11 @@ msgstr "Разрешения (контрол на достъп)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Системни настройки"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1621,6 +1682,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1631,8 +1697,13 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Помощ"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1641,18 +1712,43 @@ msgstr "Документация"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Общностни форуми"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Участвай"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Относно"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1879,6 +1975,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr ""
 
@@ -2048,144 +2149,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr ""
-
-msgctxt "menu"
-msgid "Email Invoice"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr ""
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
