po: update po/da_DK/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/da_DK/batch.po
+++ b/po/da_DK/batch.po
@@ -8,10 +8,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:45-0400\n"
-"PO-Revision-Date: 2015-04-06 22:01+0000\n"
-"Last-Translator: Aputsiaĸ Niels Janussen <aj@isit.gl>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/civicrm/language/da/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -33,6 +33,10 @@ msgstr "Se/tilføj transaktioner til massekørsel"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Genåbn massekørsel"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -59,12 +63,52 @@ msgid "No export format selected."
 msgstr "Ingen eksportformater blev valgt."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Dato for eksport"
+msgid "Batch ID"
+msgstr "ID for massekørsel"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Antal elementer"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Beskrivelse af massekørsel"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Massekørsel blev oprettet af"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Oprettelsesdato for massekørsel"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Massekørsel blev ændret af"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Ændringsdato for massekørsel"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Smartgruppe for massekørsel"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Massekørsel i alt"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Antal element for massekørsel"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Betalingsinstrument for massekørsel"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Eksportdato for massekørsel"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Massekørselsdata"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -83,6 +127,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Datapost til massekørsel for medlemskaber"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Datapost til massekørsel for betalinger af afgivne løfter"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Ignorer uoverensstemmelse og foretag behandling af bunken?"
 
@@ -91,16 +139,16 @@ msgid "Validate & Process the Batch"
 msgstr "Validér og foretag behandling af bunken"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Nogle felter blev ekskluderet."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Beløbet for den bløde kredit bør ikke være større end det samlede beløb"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Medlemstype er et påkrævet felt."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "Du kan ikke registrere to betalinger til samme afgivne løfte i en enkelt massekørsel."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -149,6 +197,10 @@ msgstr "Samlet forventet sum"
 msgid "Total amount entered"
 msgstr "Samlet angivne sum"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Åbn afgivede løfter (forfaldsdato - beløb)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Datapost-massekørsler"
@@ -170,65 +222,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Der er ikke oprettet datapost-massekørsler for dette sted."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "ID for massekørsel"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Titel på massekørsel"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Beskrivelse af massekørsel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Massekørsel blev oprettet af"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Oprettelsesdato for massekørsel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Massekørsel blev ændret af"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Ændringsdato for massekørsel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Smartgruppe for massekørsel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Massekørsel i alt"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Antal element for massekørsel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Betalingsinstrument for massekørsel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Eksportdato for massekørsel"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Massekørselsdata"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Datapost til massekørsel for betalinger af afgivne løfter"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "Du kan ikke registrere to betalinger til samme afgivne løfte i en enkelt massekørsel."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Åbn afgivede løfter (forfaldsdato - beløb)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
